# raytracer

./: README.md
2--ray-tracing-framework/: README.md
2--ray-tracing-framework/olio/: CMakeLists.txt  Doxyfile
2--ray-tracing-framework/olio/cmake/Modules/: FindOpenMesh.cmake
2--ray-tracing-framework/olio/data/scenes/: sphere_test.scn  triangle_test.scn
2--ray-tracing-framework/olio/src/core/: CMakeLists.txt  node.cc  node.h  ray.cc  ray.h  types.h
2--ray-tracing-framework/olio/src/core/camera/: camera.cc  camera.h
2--ray-tracing-framework/olio/src/core/geometry/: sphere.cc  sphere.h  surface.cc  surface.h  triangle.cc  triangle.h
2--ray-tracing-framework/olio/src/core/parser/: raytra_parser.cc  raytra_parser.h
2--ray-tracing-framework/olio/src/core/renderer/: raytracer.cc  raytracer.h
2--ray-tracing-framework/olio/src/core/utils/: segfault_handler.cc  segfault_handler.h
2--ray-tracing-framework/olio/src/rtbasic/: main.cc
2--ray-tracing-framework/olio/src/tests/: main.cc
3--illumination-and-shading/: README.md
3--illumination-and-shading/olio/cmake/Modules/: FindOSGPlugins.cmake  FindOlioCommonDepends.cmake
3--illumination-and-shading/olio/data/scenes/: kirby.scn  multiple_surfaces_no_mat.scn  multiple_surfaces_with_mat.scn  multiple_surfaces_with_mat_2.scn  myscene.scn  pink_astronaut_totoro.scn  pink_astronaut_totoro_backup.scn  scene2.scn  sphere_test.scn  triangle_test.scn
3--illumination-and-shading/olio/src/core/: CMakeLists.txt  ray.cc  ray.h
3--illumination-and-shading/olio/src/core/camera/: camera.cc  camera.h
3--illumination-and-shading/olio/src/core/geometry/: sphere.cc  sphere.h  surface.cc  surface.h  surface_list.cc  surface_list.h  triangle.cc  triangle.h
3--illumination-and-shading/olio/src/core/light/: light.cc  light.h
3--illumination-and-shading/olio/src/core/material/: phong_material.cc  phong_material.h
3--illumination-and-shading/olio/src/core/parser/: raytra_parser.cc  raytra_parser.h
3--illumination-and-shading/olio/src/core/renderer/: raytracer.cc  raytracer.h
3--illumination-and-shading/olio/src/rtbasic/: CMakeLists.txt  main.cc
3--illumination-and-shading/olio/src/tests/: CMakeLists.txt  main.cc
4--shadows--reflections--and-refractions/: README.md  olio.tgz
4--shadows--reflections--and-refractions/olio/: .gitignore  README.md
4--shadows--reflections--and-refractions/olio/cmake/Modules/: FindTBB.cmake  FindosgQt5.cmake  LibFindMacros.cmake
4--shadows--reflections--and-refractions/olio/data/scenes/: forest.scn  multiple_surfaces_with_mat_2.scn  three_spheres.scn  three_spheres_glass.scn
4--shadows--reflections--and-refractions/olio/src/: CMakeLists.txt
4--shadows--reflections--and-refractions/olio/src/core/: CMakeLists.txt  ray.cc
4--shadows--reflections--and-refractions/olio/src/core/camera/: camera.cc  camera.h
4--shadows--reflections--and-refractions/olio/src/core/geometry/: sphere.h  surface.h  surface_list.cc  surface_list.h  triangle.h
4--shadows--reflections--and-refractions/olio/src/core/light/: light.cc  light.h
4--shadows--reflections--and-refractions/olio/src/core/material/: material.cc  material.h  phong_dielectric.cc  phong_dielectric.h  phong_material.cc  phong_material.h
4--shadows--reflections--and-refractions/olio/src/core/parser/: raytra_parser.cc  raytra_parser.h
4--shadows--reflections--and-refractions/olio/src/core/renderer/: raytracer.cc  raytracer.h
4--shadows--reflections--and-refractions/olio/src/core/utils/: segfault_handler.cc
4--shadows--reflections--and-refractions/olio/src/rtbasic/: main.cc
4--shadows--reflections--and-refractions/solution_executable/: olio_rtbasic
